--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular2": "2.0.0-beta.17",
+    "rxjs": "5.0.0-beta.6",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "0.1.2",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
