--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "startdb": "mongod --dbpath db",
+    "stopdb": "mongo --eval \"db.getSiblingDB('admin').shutdownServer()\"",
+    "test-server": "mocha --watch --recursive test/server",
+    "cover-server": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter min --recursive test/server",
+    "test-client": "karma start --reporters dots",
+    "cover-client": "karma start --reporters dots,coverage --single-run",
+    "update-driver": "webdriver-manager update",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -18,5 +25,24 @@
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "mongodb": "^2.1.18"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "copyfiles": "^1.0.0",
+    "istanbul": "^0.4.2",
+    "mocha": "^2.4.5",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-clear-screen-reporter": "^1.0.0",
+    "karma-cli": "^0.1.2",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-sinon": "^1.0.4",
+    "karma-sinon-chai": "^1.2.0",
+    "protractor": "^3.3.0",
+    "sinon": "1.17.3",
+    "sinon-chai": "^2.8.0"
   }
 }
